Update docker configuration and test execution

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     volumes:
      - .:/src
     links:
-      - db
-  'db':
+      - mongodb
+  'mongodb':
     image: mongo
     volumes:
       - ./data:/data/db
